--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
         </nav>
     </header>
     <main>
-        <div class="col-xl-12 col-sm-12">
-        <p class="text-primary">El ZX Spectrum fue una mítica computadora de los 80's...</p>
-        <div id="fotos1">
-            <p><img src="./images/image_02.jpg" height="534" width="356">
-                <img src="./images/image_03.jpg">
-            </p>
+        
+        <p class="text-primary texto_index">El ZX Spectrum fue una mítica computadora de los 80's...</p>
+
+        <div class="contenedor_index">
+            <div><img class="imagen1" src="./images/image_02.jpg" height="534" width="356"></div>
+            <div><img class="imagen2" src="./images/image_03.jpg"></div>
         </div>
-        </div>
+
     </main>
     <footer>
-        <div class="text-center">
+        <div class="text-center footer_class">
         <a class="text-primary" href="mailto:zx@correo.com">Envíanos un email</a>
         <p class="text-danger">Síguenos en: <a class="text-primary" href="http://www.facebook.com" target="_blank">Facebook</a>
             <a class="text-primary" href="http://www.instagram.com" target="_blank">Instagram</a>
