--- a/src/juegos.html
+++ b/src/juegos.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/proyecto.css">
+    <link rel="stylesheet" href="../css/proyecto.css">
     <title>Juegos</title>
 </head>
 <body>
@@ -46,54 +46,48 @@
         </nav>
     </header>
     <main>
-        <h2 class="text-center">Pequeña lista de juegos</h2>
+        <h2 class="text-center texto_juegos">Pequeña lista de juegos</h2>
 
-        <div class="row">
-            <div class="col">
-                <p class="text-center">Abu Simbel Profanation</p>
-                <p><img class="mx-auto d-block" src="../images/abusimbel.jpg" height="240" width="200"></p>
+        <div class="contenedor">
+            <div class="item1">
+                <p>Abu Simbel Profanation</p>
+                <p><img src="../images/abusimbel.jpg" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Manic Miner</p>
-                <p><img class="mx-auto d-block" src="../images/manicminer.jpg" height="240" width="200"></p>
+            <div class="item2">
+                <p>Manic Miner</p>
+                <p><img src="../images/manicminer.jpg" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Alien 8</p>
-                <p><img class="mx-auto d-block" src="../images/alien8.jpg" height="240" width="200"></p>
+            <div class="item3">
+                <p>Alien 8</p>
+                <p><img src="../images/alien8.jpg" height="240" width="200"></p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p class="text-center">Movie</p>
-                <p><img class="mx-auto d-block" src="../images/Movie.gif" height="240" width="200"></p>
+            <div class="item4">
+                <p>Movie</p>
+                <p><img src="../images/Movie.gif" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Sir Fred</p>
-                <p><img class="mx-auto d-block" src="../images/sirfred.jpg" height="240" width="200"></p>
+            <div class="item5">
+                <p>Sir Fred</p>
+                <p><img src="../images/sirfred.jpg" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Booty</p>
-                <p><img class="mx-auto d-block" src="../images/Booty.gif" height="240" width="200"></p>
+            <div class="item6">
+                <p>Booty</p>
+                <p><img src="../images/Booty.gif" height="240" width="200"></p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p class="text-center">A view to a kill</p>
-                <p><img class="mx-auto d-block" src="../images/aviewtoakill.png" height="240" width="200"></p>
+            <div class="item7">
+                <p>A view to a kill</p>
+                <p><img src="../images/aviewtoakill.png" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Skool Daze</p>
-                <p><img class="mx-auto d-block" src="../images/skooldaze.jpg" height="240" width="200"></p>
+            <div class="item8">
+                <p>Skool Daze</p>
+                <p><img src="../images/skooldaze.jpg" height="240" width="200"></p>
             </div>
-            <div class="col">
-                <p class="text-center">Spy Hunter</p>
-                <p><img class="mx-auto d-block" src="../images/spyhunter.gif" height="240" width="200"></p>
+            <div class="item9">
+                <p>Spy Hunter</p>
+                <p><img src="../images/spyhunter.gif" height="240" width="200"></p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <p class="text-center">Saboteur</p>
-                <p><img class="mx-auto d-block" src="../images/saboteur.png" height="240" width="200"></p>
+            <div class="item10">
+                <p>Saboteur</p>
+                <p><img src="../images/saboteur.png" height="240" width="200"></p>
             </div>
         </div>
     </main>
